--- a/good.html
+++ b/good.html
@@ -124,7 +124,7 @@
 	</div>
 			<center><p> Want some more jokes? Click<a href="http://www.jokes4us.com/miscellaneousjokes/cleanjokes.html"> here </a>to see more!!
 
- <h1><a href="http://sooblee.github.io/a/door/">Let's See Some Random People :D </a></h1>
+ <h1>CLICK--><a href="http://sooblee.github.io/a/door/">Let's See Some Random People :D </a></h1>
    
 <embed src="/songs/2-02 후유증 (Aftermath).mp3" autostart="true" loop="true" hidden="true" />
 	
