--- a/door/index.html
+++ b/door/index.html
@@ -13,8 +13,8 @@
 
 <body>
     
-    <h1>Garage Door Menu</h1>
-    <h2>This Browser is using CSS3 Transitions for this effect.</h2>
+    <h1>PRETTY GIRLS YOOOOHOOO~</h1>
+    <h2>Put your mouse on it if you want to see their face!</h2>
 
 	<ul id="garagedoor">
 		<li id="shutter1"><a href="#1">Link 1</a></li>
