--- a/good.html
+++ b/good.html
@@ -123,12 +123,16 @@
 		</section>
 	</div>
 			<center><p> Want some more jokes? Click<a href="http://www.jokes4us.com/miscellaneousjokes/cleanjokes.html"> here </a>to see more!!
+			
+			CHECK OUT SOME CUTE MINIONS~
+						
+	<p><embed src="http://player.youku.com/player.php/sid/XNzEyMTYyMDE2/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+   
+<embed src="/songs/2-02 후유증 (Aftermath).mp3" autostart="true" loop="true" hidden="true" /></p>
 
  <h1> CLICK--> <a href="http://sooblee.github.io/a/door/">Let's See Some Random People :D </a></h1>
  
- 	<p><embed src="http://player.youku.com/player.php/sid/XNzEyMTYyMDE2/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
-   
-<embed src="/songs/2-02 후유증 (Aftermath).mp3" autostart="true" loop="true" hidden="true" /></p>
+ 	
 	
 </body>
 
