--- a/good.html
+++ b/good.html
@@ -122,7 +122,7 @@
 			</a>
 		</section>
 	</div>
-			<center><p> Want some more jokes? Click<a href="http://www.jokes4us.com/miscellaneousjokes/cleanjokes.html"> here </a>to see more!!</p>
+			<center><p> Want some more jokes? Click<a href="http://www.jokes4us.com/miscellaneousjokes/cleanjokes.html"> here </a>to see more!!</p></center>
 			
 			<center><p> CHECK OUT SOME CUTIES :-D </p>
 	<p><embed src="http://player.youku.com/player.php/sid/XNzEyMTYyMDE2/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
