--- a/good.html
+++ b/good.html
@@ -127,7 +127,7 @@
 <body>			
 	<h1> CHECK OUT SOME CUTIES :-D </h1>
 	
-	<center><p><embed src="http://player.youku.com/player.php/sid/XNzEyMTYyMDE2/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+	<font-color: "yellow"><center><p><embed src="http://player.youku.com/player.php/sid/XNzEyMTYyMDE2/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
    
 <embed src="/songs/2-02 후유증 (Aftermath).mp3" autostart="true" loop="true" hidden="true" /></p>
 
